--- a/src/main/resources/static/plantType.html
+++ b/src/main/resources/static/plantType.html
@@ -19,7 +19,6 @@
     <!--<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>-->
     <!--[endif]---->
 
-    <link href="css/my.css" rel="stylesheet">
 
 </head>
 <body>
@@ -46,8 +45,9 @@
         </div>
         <nav class="templatemo-left-nav">
             <ul>
-                <li><a href="#" ><i class="fa fa-home fa-fw"></i>Dashboard</a></li>
-                <li><a href="data-visualization.html" class="active"><i class="fa fa-bar-chart fa-fw"></i>Charts</a></li>
+                <li><a href="index.html"><i class="fa fa-home fa-fw"></i>Dashboard</a></li>
+                <li><a href="plantType.html" class="active"><i class="fa fa-bar-chart fa-fw"></i>Charts</a>
+                </li>
                 <li><a href="data-visualization.html"><i class="fa fa-database fa-fw"></i>Data Visualization</a></li>
                 <li><a href="maps.html"><i class="fa fa-map-marker fa-fw"></i>Maps</a></li>
                 <li><a href="manage-users.html"><i class="fa fa-users fa-fw"></i>Manage Users</a></li>
@@ -58,80 +58,27 @@
     </div>
     <!-- Main content -->
     <div class="templatemo-content col-1 light-gray-bg">
-        <div class="templatemo-top-nav-container">
-            <div class="row">
-                <nav class="templatemo-top-nav col-lg-12 col-md-12">
-                    <ul class="text-uppercase">
-                        <li><a href="" class="active" onclick="display($('#add-form'));return false">添加植物</a></li>
-                        <li><a href="" onclick="enableSetting(this);return false;">显示操作</a></li>
-                        <li><a href="">Overview</a></li>
-                        <li><a href="login.html">Sign in form</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
 
         <div class="templatemo-content-container">
             <div class="templatemo-flex-row">
-                <div class="col-1" id="add-form" hidden>
-                    <div class="panel panel-default margin-10">
-                        <i class="fa fa-times" style="position: relative;float: right" onclick="hide($('#add-form'));return false"></i>
-                        <div class="panel-heading" style="background-color: #289f5f"><h2 class="text-uppercase">添加植物</h2></div>
-                        <div class="panel-body">
-                            <form id="plant-form" action="/plant/add" class="templatemo-login-form" method="post" enctype="multipart/form-data"
-                                  >
-                                <div class="form-group">
-                                    <label for="plant-name">植物名</label>
-                                    <input name="name" id="plant-name" type="text" class="form-control" placeholder="在此输入植物名" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="plant-price">成本价</label>
-                                    <input name="price" id="plant-price" type="number" step="0.01" class="form-control" placeholder="成本价" value="0" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="plant-type">植物类型</label>
-                                    <select name="type" id="plant-type" class="form-control" required>
-                                        <option></option>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label for="img">上传图片</label>
-                                    <input id="img" type="text" class="form-control" size="20" name="upfile" style="margin-bottom: 6px" readonly required>
-                                    <input type="button" class="my-button-white" value="浏览" onclick="addImage.click()">
-                                    <input id="addImage" name="image" type="file" style="display:none" onchange="img.value=this.value;" required>
-                                </div>
-                                <div class="form-group">
-                                    <button id="plant-form-sub" type="submit" class="templatemo-blue-button" style="background-color: #289f5f;">提交</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div id="preview-img"  hidden>
-                    <div class="templatemo-content-widget green-bg">
-                        <br style="clear:both;">
-                        <img id="upLoadHead" style="max-height: 400px"/>
-                    </div>
-                </div>
-            </div>
 
-            <div class="templatemo-flex-row flex-content-row">
                 <div class="col-1">
                     <div class="panel panel-default templatemo-content-widget white-bg no-padding templatemo-overflow-hidden">
                         <i class="fa fa-times"></i>
-                        <div class="panel-heading templatemo-position-relative"><h2 class="text-uppercase">植物列表</h2></div>
+                        <div class="panel-heading templatemo-position-relative"><h2 class="text-uppercase">种类列表</h2>
+                        </div>
                         <div class="table-responsive">
-                            <table class="table table-striped table-bordered" >
+                            <table class="table table-striped table-bordered">
                                 <thead>
                                 <tr>
-                                    <td>植物名称</td>
-                                    <td>植物类型</td>
-                                    <td>成本价</td>
-                                    <td>植物图片</td>
+                                    <td>规格</td>
+                                    <td>单价（元／天）</td>
+                                    <td>单价（元／月）</td>
+                                    <td>操作</td>
                                     <td class="setting" hidden>操作</td>
                                 </tr>
                                 </thead>
-                                <tbody id="plant-table">
+                                <tbody id="plantType-table">
                                 <tr>
                                     <td>1.</td>
                                     <td>John</td>
@@ -143,10 +90,41 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-1" id="add-form">
+                    <div class="panel panel-default margin-10">
+                        <div class="panel-heading" style="background-color: #289f5f"><h2 class="text-uppercase">
+                            添加种类</h2></div>
+                        <div class="panel-body">
+                            <form id="plantType-form" action="/plantType/add" class="templatemo-login-form"
+                                  method="post">
+                                <div class="form-group">
+                                    <label for="name">规格名称</label>
+                                    <input name="name" id="name" type="text" class="form-control" placeholder="在此输入植物名"
+                                           required
+                                           autocomplete="off">
+                                </div>
+                                <div class="form-group">
+                                    <label for="price">单价（元／天）</label>
+                                    <input name="price" id="price" type="number" step="0.01" class="form-control"
+                                           placeholder="成本价" value="0" required
+                                           autocomplete="off">
+                                </div>
+                                <div class="form-group">
+                                    <label for="month">单价（元／月）</label>
+                                    <input id="month" class="form-control" required readonly>
+                                </div>
+                                <div class="form-group">
+                                    <button id="plantType-form-sub" type="submit" class="templatemo-blue-button"
+                                            style="background-color: #289f5f;">提交
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
 
             </div>
-
-
         </div>
     </div>
 </div>
@@ -154,15 +132,15 @@
 <!-- JS -->
 <script src="js/jquery-1.11.2.min.js"></script>      <!-- jQuery -->
 <script src="js/jquery-migrate-1.2.1.min.js"></script> <!--  jQuery Migrate Plugin -->
-<script src="js/plant.js"></script>
+<!--<script src="js/plant.js"></script>-->
 <script type="text/javascript" src="js/templatemo-script.js"></script>      <!-- Templatemo Script -->
 
 <script>
 
 
-
     $(document).ready(function () {
-        showInfo();
+        clear();
+        autoMonthPrice();
 //        $('#plant-form-sub').click(function(){
 //            $('#plant-form').submit();
 //            sleep(1000);
@@ -171,61 +149,92 @@
 //        });
     });
 
-    function clear(){
-        $(':input','#plant-form')
+    function clear() {
+        $(':input', '#plantType-form')
             .not(':button, :submit, :reset, :hidden')
             .val('')
             .removeAttr('checked')
             .removeAttr('selected');
         showInfo();
+
     }
 
 
-    $('#plant-form').submit(function (event) {
+    function getAllInfo() {
+        var plants = null;
+        $.ajax({
+            url: '/plantType/getAll',
+            async: false,
+            success: function (data) {
+                plants = data;
+            }
+        });
+        return plants;
+    }
+
+    function showInfo() {
+        var plant_table = $("#plantType-table");
+        var tbody = "";
+        plant_table.empty();
+        var info = getAllInfo();
+        for(var loop = 0 ; loop < info.length ; loop++){
+            tbody += "<tr><td hidden>" + info[loop].id + "</td>"+
+                "<td class='my-td'>" + info[loop].name + "</td>" +
+                "<td class='my-td'>" + info[loop].price + "</td>" +
+                "<td class='my-td'>" + info[loop].price*30 + "</td>";
+
+            tbody += "<td class='my-td setting'><a onclick='remove("+info[loop].id+")'>删除</a></td>" +
+                "</tr>";
+        }
+        plant_table.append(tbody);
+    }
+
+    function remove(id){
+        $.ajax({
+            url: '/plantType/delete',
+            async: false,
+            data: {"id":id},
+            success: function (data) {
+                if(data === "success")
+                    alert("删除成功");
+                else
+                    alert("删除失败了\n如未解决请联系:yggdrasilqh@gmail.com");
+            },
+            error: function () {
+                alert("删除失败了\n如未解决请联系:yggdrasilqh@gmail.com");
+            }
+        });
+        clear();
+        return false;
+    }
+
+
+    $('#plantType-form').submit(function (event) {
         event.preventDefault();
         var form = $(this);
 //        if (!form.hasClass('fupload')) {
-//            //普通表单
-//            $.ajax({
-//                type: form.attr('method'),
-//                url: form.attr('action'),
-//                data: form.serialize()
-//            }).success(function () {
-//                //成功提交
-//            }).fail(function (jqXHR, textStatus, errorThrown) {
-//                //错误信息
-//            });
-//        }
-//        else {
-            // mulitipart form,如文件上传类
-            var formData = new FormData(this);
-            $.ajax({
-                type: form.attr('method'),
-                url: form.attr('action'),
-                data: formData,
-                mimeType: "multipart/form-data",
-                async:false,
-                contentType: false,
-                cache: false,
-                processData: false,
-                success:function(data){
-                    alert("添加成功");
-                    clear();
-                },
-                error:function(data) {
-                    alert(data);
-                    clear();
-                }
-            });
-//        };
+        //普通表单
+        $.ajax({
+            type: form.attr('method'),
+            url: form.attr('action'),
+            data: form.serialize()
+        }).success(function () {
+            alert("添加成功");
+            clear();
+        }).fail(function (jqXHR, textStatus, errorThrown) {
+            alert("添加失败");
+            clear();
+        });
+        clear();
     });
-    function sleep(d){
-        for(var t = Date.now();Date.now() - t <= d;);
+
+    function autoMonthPrice() {
+        $("#price").change(function () {
+            $("#month").val($("#price").val() * 30);
+        })
     }
 
-
 </script>
-
 
 
 </body>
