--- a/src/main/resources/static/schemeList.html
+++ b/src/main/resources/static/schemeList.html
@@ -73,47 +73,21 @@
 
         <div class="templatemo-content-container">
             <div class="templatemo-flex-row">
-                <div class="col-1" id="add-form" hidden>
-                    <div class="panel panel-default margin-10">
-                        <i class="fa fa-times" style="position: relative;float: right" onclick="hide($('#add-form'));return false"></i>
-                        <div class="panel-heading" style="background-color: #289f5f"><h2 class="text-uppercase">添加植物</h2></div>
-                        <div class="panel-body">
-                            <form id="plant-form" action="/plant/add" class="templatemo-login-form" method="post" enctype="multipart/form-data"
-                                  >
-                                <div class="form-group">
-                                    <label for="plant-name">报表名</label>
-                                    <input name="name" id="plant-name" type="text" class="form-control" placeholder="在此输入报表名" required>
-                                </div>
-                                <div class="form-group">
-                                    <button id="plant-form-sub" type="submit" class="templatemo-blue-button" style="background-color: #289f5f;">提交</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div id="preview-img"  hidden>
-                    <div class="templatemo-content-widget green-bg">
-                        <br style="clear:both;">
-                        <img id="upLoadHead" style="max-height: 400px"/>
-                    </div>
-                </div>
-            </div>
-
-            <div class="templatemo-flex-row flex-content-row">
                 <div class="col-1">
                     <div class="panel panel-default templatemo-content-widget white-bg no-padding templatemo-overflow-hidden">
                         <i class="fa fa-times"></i>
-                        <div class="panel-heading templatemo-position-relative"><h2 class="text-uppercase">报表列表</h2></div>
+                        <div class="panel-heading templatemo-position-relative"><h2 class="text-uppercase">报表列表</h2>
+                        </div>
                         <div class="table-responsive">
-                            <table class="table table-striped table-bordered" >
+                            <table class="table table-striped table-bordered">
                                 <thead>
                                 <tr>
                                     <td>报表名称</td>
                                     <td>创建时间</td>
-                                    <td class="setting" hidden>操作</td>
+                                    <td class="setting">操作</td>
                                 </tr>
                                 </thead>
-                                <tbody id="plant-table">
+                                <tbody id="scheme-list">
                                 <tr>
                                     <td>1.</td>
                                     <td>John</td>
@@ -123,11 +97,33 @@
                         </div>
                     </div>
                 </div>
-
+                <div class="col-1" id="add-form">
+                    <div class="panel panel-default margin-10">
+                        <i class="fa fa-times" style="position: relative;float: right"
+                           onclick="hide($('#add-form'));return false"></i>
+                        <div class="panel-heading" style="background-color: #289f5f"><h2 class="text-uppercase">
+                            添加报表</h2></div>
+                        <div class="panel-body">
+                            <form id="schemeList-form" action="/schemeList/add" class="templatemo-login-form"
+                                  method="post" enctype="multipart/form-data">
+                                <div class="form-group">
+                                    <label for="plant-name">报表名</label>
+                                    <input name="name" id="plant-name" type="text" class="form-control"
+                                           placeholder="在此输入报表名" required>
+                                </div>
+                                <div class="form-group">
+                                    <button id="plant-form-sub" type="submit" class="templatemo-blue-button"
+                                            style="background-color: #289f5f;">提交
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-
         </div>
+
+
     </div>
 </div>
 <iframe id="id_iframe" name="id_iframe" style="display:none;"></iframe>
@@ -140,18 +136,79 @@
 <script>
 
 
-
-    $().ready(function(){
-
-    })
+    $().ready(function () {
+        showSchemeList();
+        addScheme();
+    });
 
     function getAllSchemeList() {
+        var schemeList = null;
         $.ajax({
-            url: '/schemeList/getAll'
-        })
+            url: '/schemeList/getAll',
+            async: false,
+            success: function (data) {
+                schemeList = data;
+            }
+        });
+        return schemeList;
     }
-</script>
 
+    function showSchemeList() {
+        var schemeListTable = $('#scheme-list');
+        var schemeList = getAllSchemeList();
+        var body = "";
+        for (var loop = 0; loop < schemeList.length; loop++) {
+            body += "<tr><td>" + schemeList[loop].name + "</td>" +
+                "<td>" + schemeList[loop].date + "</td>" +
+                "<td><a onclick='remove(" + schemeList[loop].id + ")'>删除</a></td>" +
+                "</tr>";
+        }
+        schemeListTable.empty();
+        schemeListTable.append(body);
+    }
+
+    function addScheme() {
+        $('#schemeList-form').submit(function (event) {
+            event.preventDefault();
+            var form = $(this);
+            //普通表单
+            $.ajax({
+                type: form.attr('method'),
+                url: form.attr('action'),
+                data: form.serialize()
+            }).success(function () {
+                alert("添加成功");
+                showSchemeList();
+            }).fail(function (jqXHR, textStatus, errorThrown) {
+                //错误信息
+                alert("添加失败");
+                showSchemeList();
+            });
+        });
+    }
+
+
+    function remove(id) {
+        $.ajax({
+            url: '/schemeList/delete',
+            async: false,
+            data: {"id": id},
+            success: function (data) {
+                if (data === "success")
+                    alert("删除成功");
+                else
+                    alert("删除失败了\n如未解决请联系:yggdrasilqh@gmail.com");
+            },
+            error: function () {
+                alert("删除失败了\n如未解决请联系:yggdrasilqh@gmail.com");
+            }
+        });
+        showInfo();
+        $('.setting').show();
+        return false;
+    }
+
+</script>
 
 
 </body>
