添加删除报表功能

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,9 +46,9 @@
         </div>
         <nav class="templatemo-left-nav">
             <ul>
-                <li><a href="index.html" class="active"><i class="fa fa-home fa-fw"></i>Dashboard</a></li>
-                <li><a href="plantType.html"><i class="fa fa-bar-chart fa-fw"></i>Charts</a></li>
-                <li><a href="data-visualization.html"><i class="fa fa-database fa-fw"></i>Data Visualization</a></li>
+                <li><a href="index.html" class="active"><i class="fa fa-home fa-fw"></i>植物管理</a></li>
+                <li><a href="plantType.html"><i class="fa fa-bar-chart fa-fw"></i>种类管理</a></li>
+                <li><a href="schemeList.html"><i class="fa fa-database fa-fw"></i>报表管理</a></li>
                 <li><a href="maps.html"><i class="fa fa-map-marker fa-fw"></i>Maps</a></li>
                 <li><a href="manage-users.html"><i class="fa fa-users fa-fw"></i>Manage Users</a></li>
                 <li><a href="preferences.html"><i class="fa fa-sliders fa-fw"></i>Preferences</a></li>
@@ -86,7 +86,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="plant-price">成本价</label>
-                                    <input name="price" id="plant-price" type="number" step="0.01" class="form-control" placeholder="成本价" value="0" required>
+                                    <input name="price" id="plant-price" type="number" step="0.01" class="form-control" placeholder="成本价" min="0" max="10000" required>
                                 </div>
                                 <div class="form-group">
                                     <label for="plant-type">植物类型</label>
