--- a/src/main/resources/static/schemeList.html
+++ b/src/main/resources/static/schemeList.html
@@ -48,7 +48,7 @@
             <ul>
                 <li><a href="index.html" class="active"><i class="fa fa-home fa-fw"></i>Dashboard</a></li>
                 <li><a href="plantType.html"><i class="fa fa-bar-chart fa-fw"></i>Charts</a></li>
-                <li><a href="data-visualization.html"><i class="fa fa-database fa-fw"></i>Data Visualization</a></li>
+                <li><a href="schemeList.html"><i class="fa fa-database fa-fw"></i>Data Visualization</a></li>
                 <li><a href="maps.html"><i class="fa fa-map-marker fa-fw"></i>Maps</a></li>
                 <li><a href="manage-users.html"><i class="fa fa-users fa-fw"></i>Manage Users</a></li>
                 <li><a href="preferences.html"><i class="fa fa-sliders fa-fw"></i>Preferences</a></li>
@@ -203,7 +203,7 @@
                 alert("删除失败了\n如未解决请联系:yggdrasilqh@gmail.com");
             }
         });
-        showInfo();
+        showSchemeList();
         $('.setting').show();
         return false;
     }
